--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     },
     "scripts": {
         "start": "node index.js",
-        "dev":"nodemon index.js"
+        "dev": "nodemon index.js"
     },
     "author": "",
     "license": "ISC",
     "dependencies": {
         "express": "^4.17.1",
+        "mongojs": "^3.1.0",
+        "mongoose": "^5.9.14",
         "nodemon": "^2.0.3",
         "passport": "^0.4.1",
         "passport-google-oauth20": "^2.0.0"
