--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "cookie-session": "^1.4.0",
         "express": "^4.17.1",
         "mongojs": "^3.1.0",
         "mongoose": "^5.9.14",
