--- a/package.json
+++ b/package.json
@@ -8,18 +8,21 @@
         "npm": "6.14.4"
     },
     "scripts": {
-        "start": "node index.js",
-        "dev": "nodemon index.js"
+        "start": "node index.js ",
+        "dev": "nodemon index.js  "
     },
     "author": "",
     "license": "ISC",
     "dependencies": {
         "cookie-session": "^1.4.0",
         "express": "^4.17.1",
+        "fs": "0.0.1-security",
+        "https": "^1.0.0",
         "mongojs": "^3.1.0",
         "mongoose": "^5.9.14",
         "nodemon": "^2.0.3",
         "passport": "^0.4.1",
+        "passport-facebook": "^3.0.0",
         "passport-google-oauth20": "^2.0.0"
     }
 }
