--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "3.4.1",
     "react-stripe-checkout": "^2.6.3",
     "redux": "^4.0.5",
+    "redux-form": "^8.3.6",
     "redux-thunk": "^2.3.0",
     "uikit": "^3.4.6",
     "uikit-react": "^3.0.20"
