--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
         "express": "^4.17.1",
         "fs": "0.0.1-security",
         "https": "^1.0.0",
+        "lodash": "^4.17.20",
         "mongojs": "^3.1.0",
         "mongoose": "^5.9.14",
         "nodemon": "^2.0.3",
         "passport": "^0.4.1",
         "passport-facebook": "^3.0.0",
         "passport-google-oauth20": "^2.0.0",
+        "path-parser": "^6.1.0",
         "sendgrid": "^5.2.3",
         "stripe": "^8.55.0"
     }
